src/test/error/tuple2.lns
let (val1) = 1; // error
